# g-2-skeleton

./: .gitignore  CMakeLists.txt  Makefile  README.md  g-2-skeleton  main.cpp
g2esoft-root-libs/: CMakeLists.txt  LinkDef.h
g2esoft-root-libs/include/: objects.h  ref_vector.h
g2esoft-root-libs/src/: objects.cxx
